Fix PrimeNG dependency conflict
- Remove PrimeNG and PrimeIcons dependencies from package.json
- Comment out PrimeNG imports in styles.scss for compatibility
- Resolve Angular 20 vs PrimeNG v18 dependency conflict
- App will use custom styles instead of PrimeNG components

--- a/pokemon-app/src/styles.scss
+++ b/pokemon-app/src/styles.scss
@@ -1,7 +1,7 @@
-/* Import PrimeNG and PrimeIcons */
-@import "primeng/resources/themes/lara-light-blue/theme.css";
-@import "primeng/resources/primeng.css";
-@import "primeicons/primeicons.css";
+/* Import PrimeNG and PrimeIcons - Commented out for compatibility */
+/* @import "primeng/resources/themes/lara-light-blue/theme.css"; */
+/* @import "primeng/resources/primeng.css"; */
+/* @import "primeicons/primeicons.css"; */
 
 /* Global Styles */
 * {
